fix la hauteru de ligne pour aligner verticalement

--- a/src/components/Buttons/ChipButton/ChipButton.module.css
+++ b/src/components/Buttons/ChipButton/ChipButton.module.css
@@ -3,6 +3,7 @@
     position: relative;
     min-width: 40px;
     height: 40px;
+    line-height: 40px;
     background-color: #FFFFFF;
     color: #D3590B;
     border-radius: 8px;
@@ -16,4 +17,5 @@
 .icon>*{
     margin-right: 10px;
     width: 16px;
+    vertical-align: middle;
 }
